# Databound

./: README.md  pyproject.toml
app/api/: main.py
app/static/styles/: base.css
app/templates/: base.html
app/templates/components/: logo.html  navbar.html  profile.html
app/templates/effects/: particles.html
app/templates/pages/: index.html
app/templates/panel/: about.html  contact.html  people.html  services.html
