[tool.poetry]
name = "Databound"
version = "0.1.0"
description = "Databound related test bench"
authors = ["Freddy Wordingham"]

[tool.poetry.dependencies]
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
python = "^3.9"
python-multipart = "^0.0.5"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
